# LP1-PROJETO-CONCORDE

./: .gitignore  CMakeLists.txt  Concorde.cpp  Concorde.h  Doxyfile  Entrada.txt  Entradas.txt  README.md  script.txt
.github/workflows/: static.yml
data/: servidores.txt  usuarios.txt
docs/html/: CanalTexto_8h_source.html  CanalVoz_8h_source.html  Canal_8h_source.html  Comands_8h_source.html  Concorde_8h_source.html  Definitions_8h_source.html  Helper_8h_source.html  Mensagem_8h_source.html  Servidor_8h_source.html  Sistema_8h_source.html  TerminalColors_8h_source.html  Usuario_8h_source.html  annotated.html  classCanal-members.html  classCanal.html  classCanalTexto-members.html  classCanalTexto.html  classCanalVoz-members.html  classCanalVoz.html  classMensagem-members.html  classMensagem.html  classServidor-members.html  classServidor.html  classSistema-members.html  classSistema.html  classUsuario-members.html  classUsuario.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_1b6a38e6bc3882f0227c0f129fe7b076.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cb81d4ac8190ca03934345a646335fe.html  dir_9631cddd05a092945954f6293a02b040.html  dir_9f6dc51727e6b8aa9896b3ff5053853f.html  dir_ceace9c10d51ff8613b211439171cb45.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e50b5e596ea7fd3b3876850f33cb4b65.html  dir_f1c681f2ea741980c794680ffe3dc739.html  files.html  (+8 more)
include/: Canal.h  CanalTexto.h  CanalVoz.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
src/: CanalTexto.cpp  CanalVoz.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp
(+42 files in other folders)
